# idmangler-legacy

./: Cargo.toml  README.md  index.html  stuff.rs  style.css
.github/workflows/: release.yml  rust.yml
src/: idview.rs  itemrender.rs  main.rs  slider.rs  wynn.rs
